[tool.poetry]
name = "arin-reddittools"
version = "0.1.0"
description = ""
authors = ["Jaap Oosterbroek <jaap@arrayinsights.com>"]
packages = [{include = "arin_reddittools"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apify-client = "^1.5.0"
pandas = "^2.1.2"
pymongo = "^4.6.0"
motor = "^3.3.1"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
transformers = "^4.35.0"
tqdm = "^4.66.1"
arin-apify = {path = "../arin-apify"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
